# awen-weave

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  STATUS.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: pull_request_template.md
.github/workflows/: check.yml  constitution-drift.yml  publish.yml
client/: __init__.py  craidd_client.py
design/: architecture.md  bra-proposal-handoff.md  bra-v2-estate-agents-pilot.md  bra-v2-estate-agents.md  building-research-agent.md  cli-design.md  client-contract.md  constitutional-framework.md  craidd-foundation-handover.md  craidd-propose-spec.md  entity-proposal-shape.md  lleolydd.md  migration-2026-05.md  roadmap.md  v0-schema.md  v0.1-schema.md
samples/: README.md
samples/dolgellau-gazetteer/snapshot-20260711T000000Z/: claims.json  manifest.json  stamps.json
samples/requests/inbox/: req-20260711-0001-chi-dolgellau.json
scripts/: check.sh  check_charters.py  check_crossrefs.py  check_register_count.py  check_stale_briefs.py  check_status.py  constitution_drift.py
snapshots/: README.md
snapshots/dolgellau-gazetteer/snapshot-20260711T000000Z/: place-anchors.json
src/cli/: __init__.py  craidd_init.py  craidd_propose.py  craidd_return.py  craidd_snapshot.py  lleolydd_cache.py
src/craidd/: __init__.py  federation.py  gazetteer.py  queue.py  ran_at.py  returns.py  snapshot.py  validation_gate.py
src/craidd/constitution_vendor/: PINNED.json  __init__.py
src/craidd/placenames/: __init__.py  authority.py
src/craidd/readers/: __init__.py  dolgellau.py
src/craidd/schema/: __init__.py  entity_types.py  predicates.py  qualifiers.py  validation.py
src/lleolydd/: __init__.py
tests/: README.md
tests/cli/: test_craidd_init.py  test_craidd_propose.py
tests/client/: test_propose_entity_and_bundle.py
tests/craidd/: test_federation_spine.py  test_returns.py
tests/lleolydd/: test_bands.py  test_boundary_line.py  test_cache_build.py  test_schema_sniff.py
tests/placenames/: test_authority.py
tests/schema/: test_constitution_drift.py  test_federation.py  test_predicates.py  test_validate_claim.py  test_validate_entity_proposal.py  test_validate_proposal.py  test_value_from_claim_columns.py
(+25 files in other folders)
