[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awen-weave"
version = "0.2.1"
description = "Awen Weave — a pattern for weaving knowledge, place, data and human judgement into coherent living systems."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Huw Thomas", email = "huw@awenweave.com" }]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "shapely>=2.1",
    "pyogrio>=0.7",
    "requests>=2.30",
    # Federation spine (S1): the offline constitution.validate gate validates
    # snapshot records against the vendored SCH-* schemas when porth is off-tailnet.
    "jsonschema>=4.20",
    "referencing>=0.30",
]
keywords = ["AI governance", "civic data", "place-based knowledge", "provenance", "data governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://awenweave.com"
Repository = "https://github.com/Awen-Weave/awen-weave"
Documentation = "https://awenweave.com"
Issues = "https://github.com/Awen-Weave/awen-weave/issues"

[project.scripts]
craidd-init = "cli.craidd_init:main"
craidd-propose = "cli.craidd_propose:main"
craidd-snapshot = "cli.craidd_snapshot:main"
lleolydd-cache = "cli.lleolydd_cache:main"

[tool.hatch.build.targets.wheel]
packages = ["src/craidd", "src/cli", "src/lleolydd", "client"]
# CSV data file for the Welsh place-names authority lives at
# `src/craidd/placenames/data/*.csv`. The `data/` dir has a stub
# `__init__.py` so hatchling auto-includes it as a sub-package.
